windows template support

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -297,7 +297,15 @@ macos-cpp14-release:
 # Windows tasks
 # -----------------
 
-VS2017-64-bit-shared-apps:
+#-------------  Job Informations:
+# Type:         Build+Test: Release
+# OS:           Windows
+# Architecture: x64
+# Shared:       TRUE
+# VS Version:   VS2017
+# Apps:         {{APPS}}
+
+build-VS2017-x64-shared-TRUE-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2017"
@@ -310,25 +318,9 @@ VS2017-64-bit-shared-apps:
     - Qt5101
   artifacts:
     paths:
-      - build-release/*.exe      
-      
-VS2017-64-bit-static-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2017"
-    ARCHITECTURE:   "x64"
-    SHARED:         "FALSE"
-    APPS:           "ON"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2017
-    - Qt5101    
-  artifacts:
-    paths:
-      - build-release/*.exe
+      - build-release/*.exe   
 
-      
-VS2017-64-bit-shared-no-apps:
+build-VS2017-x64-shared-TRUE-no-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2017"
@@ -341,8 +333,30 @@ VS2017-64-bit-shared-no-apps:
   artifacts:
     paths:
       - build-release/*.exe
+#-------------  Job Informations:
+# Type:         Build+Test: Release
+# OS:           Windows
+# Architecture: x64
+# Shared:       FALSE
+# VS Version:   VS2017
+# Apps:         {{APPS}}
 
-VS2017-64-bit-static-no-apps:
+build-VS2017-x64-shared-FALSE-apps:
+  stage: build
+  variables:
+    BUILD_PLATFORM: "VS2017"
+    ARCHITECTURE:   "x64"
+    SHARED:         "FALSE"
+    APPS:           "ON"
+  script: "CI\\Windows.bat"
+  tags:
+    - VS2017
+    - Qt5101
+  artifacts:
+    paths:
+      - build-release/*.exe   
+
+build-VS2017-x64-shared-FALSE-no-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2017"
@@ -356,7 +370,15 @@ VS2017-64-bit-static-no-apps:
     paths:
       - build-release/*.exe
 
-VS2015-64-bit-shared-apps:
+#-------------  Job Informations:
+# Type:         Build+Test: Release
+# OS:           Windows
+# Architecture: x64
+# Shared:       TRUE
+# VS Version:   VS2015
+# Apps:         {{APPS}}
+
+build-VS2015-x64-shared-TRUE-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2015"
@@ -366,12 +388,12 @@ VS2015-64-bit-shared-apps:
   script: "CI\\Windows.bat"
   tags:
     - VS2015
+    - Qt5101
   artifacts:
     paths:
-      - build-release/*.exe
-      
-      
-VS2015-64-bit-shared-no-apps:
+      - build-release/*.exe   
+
+build-VS2015-x64-shared-TRUE-no-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2015"
@@ -384,8 +406,15 @@ VS2015-64-bit-shared-no-apps:
   artifacts:
     paths:
       - build-release/*.exe
+#-------------  Job Informations:
+# Type:         Build+Test: Release
+# OS:           Windows
+# Architecture: x64
+# Shared:       FALSE
+# VS Version:   VS2015
+# Apps:         {{APPS}}
 
-VS2015-64-bit-static-apps:
+build-VS2015-x64-shared-FALSE-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2015"
@@ -395,11 +424,12 @@ VS2015-64-bit-static-apps:
   script: "CI\\Windows.bat"
   tags:
     - VS2015
+    - Qt5101
   artifacts:
     paths:
-      - build-release/*.exe
+      - build-release/*.exe   
 
-VS2015-64-bit-static-no-apps:
+build-VS2015-x64-shared-FALSE-no-apps:
   stage: build
   variables:
     BUILD_PLATFORM: "VS2015"
