--- a/CI/gitlab-ci/windows.yml
+++ b/CI/gitlab-ci/windows.yml
@@ -2,118 +2,8 @@
 # Windows tasks
 # -----------------
 
-VS2017-64-bit-shared-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2017"
-    ARCHITECTURE:   "x64"
-    SHARED:         "TRUE"
-    APPS:           "ON"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2017
-    - Qt5101
-  artifacts:
-    paths:
-      - build-release/*.exe      
-      
-VS2017-64-bit-static-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2017"
-    ARCHITECTURE:   "x64"
-    SHARED:         "FALSE"
-    APPS:           "ON"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2017
-    - Qt5101    
-  artifacts:
-    paths:
-      - build-release/*.exe
+{windows-template-job.yml, ARCHITECTURE=x64, SHARED=TRUE, VSVERSION=VS2017, QTTAG=Qt5101}
+{windows-template-job.yml, ARCHITECTURE=x64, SHARED=FALSE, VSVERSION=VS2017, QTTAG=Qt5101}
 
-      
-VS2017-64-bit-shared-no-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2017"
-    ARCHITECTURE:   "x64"
-    SHARED:         "TRUE"
-    APPS:           "OFF"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2017
-  artifacts:
-    paths:
-      - build-release/*.exe
-
-VS2017-64-bit-static-no-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2017"
-    ARCHITECTURE:   "x64"
-    SHARED:         "FALSE"
-    APPS:           "OFF"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2017
-  artifacts:
-    paths:
-      - build-release/*.exe
-
-VS2015-64-bit-shared-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2015"
-    ARCHITECTURE:   "x64"
-    SHARED:         "TRUE"
-    APPS:           "ON"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2015
-  artifacts:
-    paths:
-      - build-release/*.exe
-      
-      
-VS2015-64-bit-shared-no-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2015"
-    ARCHITECTURE:   "x64"
-    SHARED:         "TRUE"
-    APPS:           "OFF"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2015
-  artifacts:
-    paths:
-      - build-release/*.exe
-
-VS2015-64-bit-static-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2015"
-    ARCHITECTURE:   "x64"
-    SHARED:         "FALSE"
-    APPS:           "ON"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2015
-  artifacts:
-    paths:
-      - build-release/*.exe
-
-VS2015-64-bit-static-no-apps:
-  stage: build
-  variables:
-    BUILD_PLATFORM: "VS2015"
-    ARCHITECTURE:   "x64"
-    SHARED:         "FALSE"
-    APPS:           "OFF"
-  script: "CI\\Windows.bat"
-  tags:
-    - VS2015
-  artifacts:
-    paths:
-      - build-release/*.exe
+{windows-template-job.yml, ARCHITECTURE=x64, SHARED=TRUE, VSVERSION=VS2015, QTTAG=Qt5101}
+{windows-template-job.yml, ARCHITECTURE=x64, SHARED=FALSE, VSVERSION=VS2015, QTTAG=Qt5101}
