--- a/Doc/CMakeLists.txt
+++ b/Doc/CMakeLists.txt
@@ -3,10 +3,7 @@ include (ACGDoxygen)
 IF (DOXYGEN_FOUND)
 
   # Add a documentation install target
-  add_custom_target(doc-install COMMENT "Installing Documentation" VERBATIM )
-
-  # Build Documentation before installing it
-  add_dependencies(doc-install doc)
+  acg_create_doc_target(doc-install)
 
   if (TARGET doc-install)
     acg_copy_after_build (doc-install "${CMAKE_BINARY_DIR}/Build/${ACG_PROJECT_DATADIR}/Doc/html"   "${CMAKE_INSTALL_PREFIX}/${ACG_PROJECT_DATADIR}/doc/html")
