--- a/src/OpenMesh/Apps/Decimating/DecimaterGui/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Decimating/DecimaterGui/CMakeLists.txt
@@ -1,4 +1,4 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../../..
@@ -21,9 +21,9 @@ set (sources
 )
 
 if (WIN32)
-  acg_add_executable (DecimaterGui WIN32 ${sources} ${headers})
+  vci_add_executable (DecimaterGui WIN32 ${sources} ${headers})
 else ()
-  acg_add_executable (DecimaterGui ${sources} ${headers} ) 
+  vci_add_executable (DecimaterGui ${sources} ${headers} )
 endif ()
 
 target_link_libraries (DecimaterGui
