--- a/src/OpenMesh/Apps/Dualizer/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Dualizer/CMakeLists.txt
@@ -1,10 +1,10 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../..
 )
 
-acg_add_executable (Dualizer dualizer.cc)
+vci_add_executable (Dualizer dualizer.cc)
 
 target_link_libraries (Dualizer
   OpenMeshCore
