--- a/src/OpenMesh/Apps/Smoothing/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Smoothing/CMakeLists.txt
@@ -1,11 +1,11 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../..
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-acg_add_executable (Smoothing smooth.cc)
+vci_add_executable (Smoothing smooth.cc)
 
 target_link_libraries (Smoothing
   OpenMeshCore
