--- a/src/OpenMesh/Apps/Subdivider/SubdividerGui/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Subdivider/SubdividerGui/CMakeLists.txt
@@ -1,4 +1,4 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../../..
@@ -20,9 +20,9 @@ set (sources
 )
 
 if (WIN32)
-  acg_add_executable (SubdividerGui WIN32 ${sources} ${headers})
+  vci_add_executable (SubdividerGui WIN32 ${sources} ${headers})
 else ()
-  acg_add_executable (SubdividerGui ${sources} ${headers})
+  vci_add_executable (SubdividerGui ${sources} ${headers})
 endif ()
 
 target_link_libraries (SubdividerGui
