--- a/src/OpenMesh/Apps/mconvert/CMakeLists.txt
+++ b/src/OpenMesh/Apps/mconvert/CMakeLists.txt
@@ -1,10 +1,10 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../..
 )
 
-acg_add_executable (mconvert mconvert.cc)
+vci_add_executable (mconvert mconvert.cc)
 
 target_link_libraries (mconvert
   OpenMeshCore
