--- a/src/OpenMesh/Apps/Subdivider/commandlineAdaptiveSubdivider/CMakeLists.txt
+++ b/src/OpenMesh/Apps/Subdivider/commandlineAdaptiveSubdivider/CMakeLists.txt
@@ -1,11 +1,11 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../../..
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-acg_add_executable (commandlineAdaptiveSubdivider ../adaptive_subdivider.cc)
+vci_add_executable (commandlineAdaptiveSubdivider ../adaptive_subdivider.cc)
 
 target_link_libraries (commandlineAdaptiveSubdivider
   OpenMeshCore
