--- a/src/OpenMesh/Apps/VDProgMesh/Analyzer/CMakeLists.txt
+++ b/src/OpenMesh/Apps/VDProgMesh/Analyzer/CMakeLists.txt
@@ -1,11 +1,11 @@
-include (ACGCommon)
+include (VCICommon)
 
 include_directories (
   ../../../..
   ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-acg_add_executable (Analyzer vdpmanalyzer.cc)
+vci_add_executable (Analyzer vdpmanalyzer.cc)
 
 target_link_libraries (Analyzer
   OpenMeshCore
