more renaming of acg to vci

--- a/Doc/CMakeLists.txt
+++ b/Doc/CMakeLists.txt
@@ -6,7 +6,7 @@ IF (DOXYGEN_FOUND)
   vci_create_doc_target(doc-install)
 
   if (TARGET doc-install)
-    vci_copy_after_build (doc-install "${CMAKE_BINARY_DIR}/Build/${ACG_PROJECT_DATADIR}/Doc/html"   "${CMAKE_INSTALL_PREFIX}/${ACG_PROJECT_DATADIR}/doc/html")
+    vci_copy_after_build (doc-install "${CMAKE_BINARY_DIR}/Build/${VCI_PROJECT_DATADIR}/Doc/html"   "${CMAKE_INSTALL_PREFIX}/${VCI_PROJECT_DATADIR}/doc/html")
   endif()
 
 ENDIF(DOXYGEN_FOUND)
