--- a/Doc/doxy.config.in
+++ b/Doc/doxy.config.in
@@ -58,7 +58,7 @@ PROJECT_LOGO           = @CMAKE_CURRENT_SOURCE_DIR@/images/rwth_vci_rgb.jpg
 # entered, it will be relative to the location where doxygen was started. If
 # left blank the current directory will be used.
 
-OUTPUT_DIRECTORY       = @CMAKE_BINARY_DIR@/Build/@ACG_PROJECT_DATADIR@/Doc
+OUTPUT_DIRECTORY       = @CMAKE_BINARY_DIR@/Build/@VCI_PROJECT_DATADIR@/Doc
 
 # If the CREATE_SUBDIRS tag is set to YES then doxygen will create 4096 sub-
 # directories (in 2 levels) under the output directory of each output format and
@@ -1128,7 +1128,7 @@ HTML_HEADER            =
 # that doxygen normally uses.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_FOOTER            = @CMAKE_CURRENT_SOURCE_DIR@/html/acg_footer.html
+HTML_FOOTER            = @CMAKE_CURRENT_SOURCE_DIR@/html/vci_footer.html
 
 # The HTML_STYLESHEET tag can be used to specify a user-defined cascading style
 # sheet that is used by each HTML page. It can be used to fine-tune the look of
