--- a/CI/gitlab-ci/linux-template-build-job.yml
+++ b/CI/gitlab-ci/linux-template-build-job.yml
@@ -4,7 +4,7 @@
 # Compiler:   {{COMPILER}}
 # Language:   {{LANGUAGE}}
 
-build-{{BUILDTYPE}}-{{COMPILER}}-{{LANGUAGE}}:
+iwyu-{{BUILDTYPE}}-{{COMPILER}}-{{LANGUAGE}}:
   stage: build
   script: "CI/ci-linux-build.sh {{COMPILER}} {{LANGUAGE}} {{BUILDTYPE}}"
   image: graphics.rwth-aachen.de:4567/docker/docker/docker-openmesh-container
