add /bigobj to compile options for visual studio

--- a/src/OpenMesh/Core/CMakeLists.txt
+++ b/src/OpenMesh/Core/CMakeLists.txt
@@ -44,7 +44,10 @@ else ()
   acg_add_library (OpenMeshCore SHAREDANDSTATIC ${sources} ${headers})
   set_target_properties (OpenMeshCore PROPERTIES VERSION ${OPENMESH_VERSION_MAJOR}.${OPENMESH_VERSION_MINOR}
                                                SOVERSION ${OPENMESH_VERSION_MAJOR}.${OPENMESH_VERSION_MINOR} )
+endif ()
 
+if (MSVC)
+  target_compile_options(OpenMeshCore PRIVATE /bigobj)
 endif ()
 
 # Add core as dependency before fixbundle 
