--- a/openmesh.pc.in
+++ b/openmesh.pc.in
@@ -5,7 +5,7 @@ includedir=${prefix}/include
 
 Name: libOpenMesh
 Description: OpenMesh library
-Version: @OPENMESH_VERSION_MAJOR@.@OPENMESH_VERSION_MINOR@
+Version: @PROJECT_VERSION_MAJOR@.@PROJECT_VERSION_MINOR@
 
 Libs: -L${libdir} @PRIVATE_LIBS@
 Cflags: -I${includedir}
