Replace remaining PROJECT_NAMES with CMAKE_PROJECT_NAMES

--- a/src/OpenMesh/Apps/CMakeLists.txt
+++ b/src/OpenMesh/Apps/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 if ( BUILD_APPS )
 
   # Only build and fixbundle apps, when we are building OpenMesh standalone
-  if(${PROJECT_NAME} MATCHES "OpenMesh")
+  if(${CMAKE_PROJECT_NAME} MATCHES "OpenMesh")
 
     if ( WIN32 AND OPENMESH_BUILD_SHARED )
 	  add_definitions(-DOPENMESHDLL )
