--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,9 @@ set( CMAKE_CXX_STANDARD 11 )
 enable_testing()
 
 
-project (OpenMesh VERSION 9.0.0) 
+project (OpenMesh 
+         VERSION 9.0.0
+         LANGUAGES CXX ) 
 
 # Set AUTO UIC/MOC Policy to new for CMAKE 3.17 or higher
 if(${CMAKE_VERSION} VERSION_GREATER_EQUAL "3.17")
